# Soft-Actor-Critic

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: sac_mujoco_base.yaml  sac_mujoco_sweep.yaml
scripts/: aggregate_results.py  eval.py  run_sweep.py  train.py
src/sac/: __init__.py  agent.py  config.py  envs.py  eval.py  logging.py  networks.py  replay_buffer.py  trainer.py
tests/: conftest.py  helpers.py
tests/integration/: test_trainer_integration.py
tests/regression/: test_regression.py
tests/unit/: test_agent_math.py  test_config.py  test_networks.py  test_replay_buffer.py
